# Tetris-Game-OpenGL

./: .gitignore  CMakeLists.txt  GUIDE.md  README.md
include/: clickable_object.h  game.h  glad.h  shader.h  sprite_renderer.h  tetromino.h  text_renderer.h  texture.h
include/glad/: glad.h
src/: clickable_object.cpp  game.cpp  glad.c  main.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  tetromino.cpp  text_renderer.cpp  texture.cpp
